Ajout du code secret

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">July Dulac</a></h1>
-					<p>Je me suis reprogrammée à cause du COVID-19
+					<p>What do I do? Whatever it takes!<html lang="en">
+					<head>
+						<meta charset="UTF-8">
+						<meta http-equiv="X-UA-Compatible" content="IE=edge">
+						<meta name="viewport" content="width=device-width, initial-scale=1.0">
+						<title>Document</title>
+					</head>
+					<body>
+						
+					</body>
+					</html>
 					</p>
 				</header>
 				<nav id="nav">
@@ -63,7 +73,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Ce que je peux faire</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Intégrer un fichier de style sur un fichier HTML integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
