--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="http://www.cornify.com/js/cornify.js"></script>
 
 	</body>
 </html>
