changer couleur turquoise

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">July Dulac</a></h1>
-					<p>What do I do? Whatever it takes!<html lang="en">
+					<p>What do I do? Whatever it takes!<html lang="fr">
 					<head>
 						<meta charset="UTF-8">
 						<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
+						<li><a href="#one" class="active">À propos</a></li>
 						<li><a href="#two">Ce que je peux accomplir</a></li>
 						<li><a href="#three">Ce que j'ai déjà accomplie</a></li>
 						<li><a href="#four">Me contacter</a></li>
@@ -57,15 +57,15 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images\ban-paint.png" alt="" />
+									<img src="images\IOT-blue (1).jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Techno avec July Dulac</h2>
+										<h2>IoT AI & July Dulac</h2>
 										<p>Les projets se concrétisent avec moi<br />
 										</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Diplomée en 2022 en Internet des objets et Intelligence artificielle, première cohorte du Collège&ensp;Ahuntsic.</p>
 								</div>
 							</section>
 
@@ -73,14 +73,14 @@
 							<section id="two">
 								<div class="container">
 									<h3>Ce que je peux faire</h3>
-									<p>Intégrer un fichier de style sur un fichier HTML integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Concevoir, modifier et valider des programmes</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
+										<li class="icon solid fa-code">Programmation</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-book">Apprentissage rapide</li>
+										<li class="icon solid fa-coffee">Participation active</li>
+										<li class="icon solid fa-bolt">Ingénieuse</li>
+										<li class="icon solid fa-users">Intègre facilement une équipe</li>
 									</ul>
 								</div>
 							</section>
@@ -120,17 +120,17 @@
 							<section id="four">
 								<div class="container">
 									<h3>Me contacter</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Toujours disponible à vos nouveaux projets</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nom" /></div>
+											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Couriel" /></div>
+											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Sujet" /></div>
 											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
 											<div class="col-12">
 												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
+													<li><input type="submit" class="primary" value="Envoyer Message" /></li>
+													<li><input type="reset" value="Recommencer" /></li>
 												</ul>
 											</div>
 										</div>
@@ -475,7 +475,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; July Dulac. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
